--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testestest
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventmanager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-security.jwt.secret-key= secretsecretsecretsecretsecretsecret
+security.jwt.secret-key= SUPERSECRETKEYFORJWTSIGNATURE
