--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,12 +5,16 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.34",
+    "@material-ui/x-grid": "^4.0.0-alpha.34",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/js-cookie": "^2.2.7",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
