--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 security.jwt.secret-key= SUPERSECRETKEYFORJWTSIGNATURE
+
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=b55f580d63c202
+spring.mail.password=e8bbb728c2fbc5
