--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@zxing/library": "^0.18.6",
     "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "material-ui": "^0.20.2",
